# video-stream-People-Detection

./: CMakeLists.txt  README.md  build.sh
cfg/: yolov4-tiny-3l_15x11.cfg  yolov4-tiny-3l_15x11__.cfg  yolov4-tiny-3l_15x11_crowd.cfg  yolov4-tiny-mr-person_15x11.cfg  yolov4-tiny-mr-person_15x11_coco.cfg  yolov4-tiny-mr-person_15x11_coco_crowd.cfg
include/: drawing.hpp  roiSetup.hpp
src/: main.cpp
